--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@tinymce/tinymce-angular": "^4.2.0",
+    "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "tinymce": "^5.5.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
