--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@angular/compiler": "~10.1.5",
     "@angular/core": "~10.1.5",
     "@angular/forms": "~10.1.5",
+    "@angular/localize": "~10.1.5",
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@tinymce/tinymce-angular": "^4.2.0",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
