--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "7.0.0",
     "@tinymce/tinymce-angular": "^4.2.0",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
