--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tinymce": "^5.5.1",
@@ -35,11 +36,12 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.7",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "^10.1.7",
     "@angular/compiler-cli": "^10.1.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.162",
     "@types/node": "^12.12.69",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
