Created Leaflet Base Map with markers

--- a/angular.json
+++ b/angular.json
@@ -30,11 +30,12 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
               "node_modules/popper.js/dist/umd/popper.js",
+              "node_modules/leaflet/dist/leaflet.js"
             ]
           },
           "configurations": {
