--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "leaflet": "1.7.1",
     "lodash": "^4.17.20",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
@@ -42,6 +43,7 @@
     "@angular/compiler-cli": "^10.1.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.5.19",
     "@types/lodash": "^4.14.162",
     "@types/node": "^12.12.69",
     "codelyzer": "^6.0.0",
