--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "leaflet": "1.7.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
     "lodash": "^4.17.20",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
@@ -45,7 +46,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/leaflet": "^1.5.19",
     "@types/lodash": "^4.14.162",
-    "@types/node": "^12.12.69",
+    "@types/node": "^12.19.5",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
