--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxyconfig.json",
-    "build": "ng build",
+    "build": "ng build --prod",
+    "postbuild": "python3 .git/hooks/pre-commit",
+    "commit": "git add * && git commit -m 'build update' && git push origin",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -26,7 +28,7 @@
     "@ngx-formly/schematics": "^5.10.4",
     "@tinymce/tinymce-angular": "^4.2.0",
     "@vime/angular": "^4.3.3",
-    "bootstrap": "4.5.3",
+    "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "leaflet": "1.7.1",
