--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxyconfig.json",
     "build": "ng build --prod",
-    "postbuild": "python3 .git/hooks/pre-commit",
-    "commit": "git add * && git commit -m 'build update' && git push origin",
+    "postbuild": "python3 .git/hooks/pre-commit && npm run commit",
+    "commit": "git add dist/* && git commit -m 'build update' && git push origin",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
