--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.6",
-    "@angular/common": "^10.1.6",
-    "@angular/compiler": "^10.1.6",
-    "@angular/core": "^10.1.6",
-    "@angular/forms": "^10.1.6",
+    "@angular/animations": "^10.2.3",
+    "@angular/common": "^10.2.3",
+    "@angular/compiler": "^10.2.3",
+    "@angular/core": "^10.2.3",
+    "@angular/forms": "^10.2.3",
     "@angular/localize": "~10.1.5",
-    "@angular/platform-browser": "^10.1.6",
-    "@angular/platform-browser-dynamic": "^10.1.6",
-    "@angular/router": "^10.1.6",
+    "@angular/platform-browser": "^10.2.3",
+    "@angular/platform-browser-dynamic": "^10.2.3",
+    "@angular/router": "^10.2.3",
     "@ng-bootstrap/ng-bootstrap": "7.0.0",
-    "@ngx-formly/bootstrap": "^5.10.4",
-    "@ngx-formly/core": "^5.10.4",
-    "@ngx-formly/schematics": "^5.10.4",
+    "@ngx-formly/bootstrap": "^5.10.8",
+    "@ngx-formly/core": "^5.10.8",
+    "@ngx-formly/schematics": "^5.10.8",
     "@tinymce/tinymce-angular": "^4.2.0",
-    "@vime/angular": "^4.3.3",
+    "@vime/angular": "^4.7.3",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
@@ -36,19 +36,19 @@
     "lodash": "^4.17.20",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
-    "tinymce": "^5.5.1",
+    "tinymce": "^5.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1002.0",
-    "@angular/cli": "^10.1.7",
-    "@angular/compiler-cli": "^10.1.6",
+    "@angular/cli": "^10.2.0",
+    "@angular/compiler-cli": "^10.2.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/leaflet": "^1.5.19",
-    "@types/lodash": "^4.14.162",
-    "@types/node": "^12.19.5",
+    "@types/lodash": "^4.14.165",
+    "@types/node": "^12.19.9",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -61,6 +61,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.5"
   }
 }
