--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "@angular/compiler": "^10.2.3",
     "@angular/core": "^10.2.3",
     "@angular/forms": "^10.2.3",
-    "@angular/localize": "~10.1.5",
+    "@angular/localize": "^10.2.3",
     "@angular/platform-browser": "^10.2.3",
     "@angular/platform-browser-dynamic": "^10.2.3",
     "@angular/router": "^10.2.3",
     "@ng-bootstrap/ng-bootstrap": "7.0.0",
-    "@ngx-formly/bootstrap": "^5.10.8",
-    "@ngx-formly/core": "^5.10.8",
-    "@ngx-formly/schematics": "^5.10.8",
+    "@ngx-formly/bootstrap": "^5.10.9",
+    "@ngx-formly/core": "^5.10.9",
+    "@ngx-formly/schematics": "^5.10.9",
     "@tinymce/tinymce-angular": "^4.2.0",
-    "@vime/angular": "^4.7.3",
+    "@vime/angular": "^4.3.3",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
