--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
               "src/favicon.ico",
               "src/assets",
               { "glob": "**/*", "input": "node_modules/tinymce", "output": "/tinymce/" },
-              { "glob": "**/*", "input": "node_modules/leaflet/dist/images", "output": "assets/"}
+              { "glob": "**/*", "input": "node_modules/leaflet/dist/images", "output": "assets/"},
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.scss",
@@ -66,7 +67,9 @@
                   "maximumWarning": "6kb",
                   "maximumError": "10kb"
                 }
-              ]
+              ],
+              "serviceWorker": true,
+              "ngswConfigPath": "ngsw-config.json"
             }
           }
         },
@@ -96,7 +99,8 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.scss"
