--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -14,13 +14,13 @@
           "/*.js"
         ],
         "urls": [
-          "/static/frontpage/images/pic01.jpg",
-          "/static/frontpage/images/pic02.jpg",
-          "/static/frontpage/images/pic03.jpg",
-          "/static/frontpage/images/pic04.jpg",
-          "/static/frontpage/images/pic06.jpg",
-          "/static/frontpage/images/pic07.jpg",
-          "/static/wiki/images/404.png"
+          "https://www.aldrune.com/static/frontpage/images/pic01.jpg",
+          "https://www.aldrune.com/static/frontpage/images/pic02.jpg",
+          "https://www.aldrune.com/static/frontpage/images/pic03.jpg",
+          "https://www.aldrune.com/static/frontpage/images/pic04.jpg",
+          "https://www.aldrune.com/static/frontpage/images/pic06.jpg",
+          "https://www.aldrune.com/static/frontpage/images/pic07.jpg",
+          "https://www.aldrune.com/static/wiki/images/404.png"
         ]
       }
     },
@@ -53,6 +53,24 @@
       ],
       "cacheConfig": {
         "maxSize": 10,
+        "maxAge": "1h",
+        "timeout": "5s",
+        "strategy": "freshness"
+      }
+    },
+    {
+      "name": "aldruneWikiArticles",
+      "urls": [
+        "https://www.aldrune.com/wiki1/api/character/*",
+        "https://www.aldrune.com/wiki1/api/location/*/*",
+        "https://www.aldrune.com/wiki1/api/organization/*",
+        "https://www.aldrune.com/wiki1/api/item/*",
+        "https://www.aldrune.com/wiki1/api/diaryentry/*/*/*",
+        "https://www.aldrune.com/wiki1/api/creature/*",
+        "https://www.aldrune.com/wiki1/api/map/*"
+      ],
+      "cacheConfig": {
+        "maxSize": 50,
         "maxAge": "1h",
         "timeout": "5s",
         "strategy": "freshness"
