--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -21,6 +21,7 @@
           "https://www.aldrune.com/static/frontpage/images/pic06.jpg",
           "https://www.aldrune.com/static/frontpage/images/pic07.jpg",
           "https://www.aldrune.com/static/wiki/images/404.png",
+          "https://www.aldrune.com/static/wiki/images/504.png",
           "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600"
         ]
       }
@@ -68,12 +69,13 @@
         "https://www.aldrune.com/wiki1/api/diaryentry/**",
         "https://www.aldrune.com/wiki1/api/creature/**",
         "https://www.aldrune.com/wiki1/api/map/**",
-        "https://www.aldrune.com/wiki1/api/randomquote/**"
+        "https://www.aldrune.com/wiki1/api/randomquote/**",
+        "https://www.aldrune.com/wiki1/api/recentupdates"
       ],
       "cacheConfig": {
         "maxSize": 100,
-        "maxAge": "1h",
-        "timeout": "5s",
+        "maxAge": "10m",
+        "timeout": "10s",
         "strategy": "freshness"
       }
     }
