--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngx-formly/schematics": "^5.10.9",
     "@tinymce/tinymce-angular": "^4.2.0",
     "@vime/angular": "^4.3.3",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
