--- a/package.json
+++ b/package.json
@@ -13,43 +13,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.2.3",
-    "@angular/common": "^10.2.3",
-    "@angular/compiler": "^10.2.3",
-    "@angular/core": "^10.2.3",
-    "@angular/forms": "^10.2.3",
-    "@angular/localize": "^10.2.3",
-    "@angular/platform-browser": "^10.2.3",
-    "@angular/platform-browser-dynamic": "^10.2.3",
-    "@angular/router": "^10.2.3",
-    "@angular/service-worker": "^10.2.3",
+    "@angular/animations": "^10.2.5",
+    "@angular/common": "^10.2.5",
+    "@angular/compiler": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
+    "@angular/localize": "^10.2.5",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/router": "^10.2.5",
+    "@angular/service-worker": "^10.2.5",
     "@ng-bootstrap/ng-bootstrap": "7.0.0",
-    "@ngx-formly/bootstrap": "^5.10.9",
-    "@ngx-formly/core": "^5.10.9",
-    "@ngx-formly/schematics": "^5.10.9",
-    "@tinymce/tinymce-angular": "^4.2.0",
-    "@vime/angular": "^4.3.3",
+    "@ngx-formly/bootstrap": "^5.10.21",
+    "@ngx-formly/core": "^5.10.21",
+    "@ngx-formly/schematics": "^5.10.21",
+    "@tinymce/tinymce-angular": "^4.2.4",
+    "@vime/angular": "^4.7.3",
     "animate.css": "^4.1.1",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "leaflet": "1.7.1",
     "popper.js": "^1.16.1",
-    "rxjs": "~6.6.0",
-    "tinymce": "^5.6.2",
-    "tslib": "^2.0.0",
+    "rxjs": "^6.6.7",
+    "tinymce": "^5.8.2",
+    "tslib": "^2.3.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.1",
-    "@angular/cli": "^10.2.0",
-    "@angular/compiler-cli": "^10.2.3",
+    "@angular-devkit/build-angular": "^0.1002.3",
+    "@angular/cli": "^10.2.3",
+    "@angular/compiler-cli": "^10.2.5",
     "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/leaflet": "^1.5.19",
-    "@types/node": "^12.19.9",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "@types/jasminewd2": "^2.0.9",
+    "@types/leaflet": "^1.7.3",
+    "@types/node": "^12.20.15",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
