--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
     "leaflet": "1.7.1",
     "popper.js": "^1.16.1",
