Taught data group to cache campaign data as good as possible

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -43,6 +43,17 @@
   ],
   "dataGroups": [
     {
+      "name": "campaignData",
+      "urls": [
+        "https://www.aldrune.com/wiki1/api/campaign/*/"
+      ],
+      "cacheConfig": {
+        "maxSize": 100,
+        "maxAge": "3d",
+        "strategy": "performance"
+      }
+    },
+    {
       "name": "aldruneWikiOverview",
       "urls": [
         "https://www.aldrune.com/wiki1/api/overview/character",
