--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.2.5",
-    "@angular/common": "^10.2.5",
-    "@angular/compiler": "^10.2.5",
-    "@angular/core": "^10.2.5",
-    "@angular/forms": "^10.2.5",
-    "@angular/localize": "^10.2.5",
-    "@angular/platform-browser": "^10.2.5",
-    "@angular/platform-browser-dynamic": "^10.2.5",
-    "@angular/router": "^10.2.5",
-    "@angular/service-worker": "^10.2.5",
+    "@angular/animations": "^11.2.14",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
+    "@angular/localize": "^11.2.14",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/router": "^11.2.14",
+    "@angular/service-worker": "^11.2.14",
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "@ng-bootstrap/ng-bootstrap": "8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "9.0.0",
     "@ngx-formly/bootstrap": "^5.10.21",
     "@ngx-formly/core": "^5.10.21",
     "@ngx-formly/schematics": "^5.10.21",
     "@tinymce/tinymce-angular": "^4.2.4",
-    "@vime/angular": "^4.3.3",
+    "@vime/angular": "^5.0.3",
     "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
@@ -43,22 +43,22 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.3",
-    "@angular/cli": "^10.2.3",
-    "@angular/compiler-cli": "^10.2.5",
+    "@angular-devkit/build-angular": "^0.1102.15",
+    "@angular/cli": "^11.2.15",
+    "@angular/compiler-cli": "^11.2.14",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "^2.0.9",
     "@types/leaflet": "^1.7.3",
     "@types/node": "^12.20.15",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~3.7.1",
+    "jasmine-core": "^3.9.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.8",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^10.1.0",
+    "ng-packagr": "^11.2.4",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
