Updated packages to Angular 12 and vime core instead of vimejs

--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@angular/router": "^12.2.13",
     "@angular/service-worker": "^12.2.13",
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "@ng-bootstrap/ng-bootstrap": "9.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ngx-formly/bootstrap": "^5.10.21",
     "@ngx-formly/core": "^5.10.21",
     "@ngx-formly/schematics": "^5.10.21",
     "@tinymce/tinymce-angular": "^4.2.4",
-    "@vime/angular": "^5.0.3",
+    "@vime/core": "^5.0.35",
     "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
