--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@ngx-formly/bootstrap": "^5.10.21",
     "@ngx-formly/core": "^5.10.21",
     "@ngx-formly/schematics": "^5.10.21",
+    "@ngx-loading-bar/core": "^5.1.2",
+    "@ngx-loading-bar/router": "^5.1.2",
     "@tinymce/tinymce-angular": "^4.2.4",
     "@vime/core": "^5.0.35",
     "animate.css": "^4.1.1",
