--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,9 @@
         "dist/aldrunewiki-swagger-client"
       ]
     }
+  },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "preserveWhitespaces": true,
   }
 }
