--- a/angular.json
+++ b/angular.json
@@ -136,6 +136,9 @@
           }
         }
       }
-    }},
-  "defaultProject": "frontend"
+    }
+  },
+  "cli": {
+    "analytics": false
+  }
 }
